@@ -1,3 +1,4 @@
+  - add caching of requested paths to _assemble_plugin_filepath() (messju)
   - fix handling of comments inside {php}- and {literal}-blocks (messju)
   - fix bug handling triple-quotes in config-files (BRDude, messju)
   - change default of request_use_auto_globals to true - $_SERVER is
